[gd_scene load_steps=10 format=1]

[ext_resource path="res://Scripts/trump.gd" type="Script" id=1]
[ext_resource path="res://Textures/trump.png" type="Texture" id=2]
[ext_resource path="res://Textures/trump_head.png" type="Texture" id=3]
[ext_resource path="res://Textures/trump_body.png" type="Texture" id=4]
[ext_resource path="res://Textures/explosion.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 82.1094, 145.602 )

[sub_resource type="Animation" id=4]

resource/name = "Explotion"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Explosion:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ true ] }
tracks/1/type = "value"
tracks/1/path = NodePath("Explosion:transform/scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.1, 0.4 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ Vector2( 0.566031, 0.566031 ), Vector2( 3, 3 ), Vector2( 0.1, 0.1 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("Body:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 0.1 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ true, false ] }

[sub_resource type="Animation" id=2]

resource/name = "Trump"
length = 0.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Head:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.2 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( -0.0728917, -4.79222 ), Vector2( -0.366925, -3.32204 ) ] }

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 32.2633, 32.4523 )

[node name="RigidBody2D" type="RigidBody2D" groups=[ "Jumpable" ]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 0.4, 0, 0, 0.4, 0, -16.245 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 10.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, -16.245 )
transform/scale = Vector2( 0.4, 0.4 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Explotion = SubResource( 4 )
anims/Trump = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "Trump"

[node name="Body" type="Node2D" parent="."]

transform/scale = Vector2( 2.5, 2.5 )

[node name="Full_body" type="Sprite" parent="Body"]

visibility/visible = false
transform/pos = Vector2( -0.158887, -3.81325 )
transform/scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 2 )

[node name="Head" type="Sprite" parent="Body"]

transform/pos = Vector2( -0.0728917, -4.79222 )
transform/scale = Vector2( 0.154415, 0.154415 )
texture = ExtResource( 3 )

[node name="Body" type="Sprite" parent="Body"]

transform/pos = Vector2( 0.51518, -4.20414 )
transform/scale = Vector2( 0.154415, 0.154415 )
texture = ExtResource( 4 )
__meta__ = { "_edit_lock_":true }

[node name="Explosion_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[node name="Countdown_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Explosion_area" type="Area2D" parent="."]

transform/pos = Vector2( -2.22882, -15.7918 )
transform/scale = Vector2( 3.25048, 3.25048 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Explosion_area"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="Countdown" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -20.0
margin/top = -93.0
margin/right = 20.0
margin/bottom = -79.0
custom_colors/font_color = Color( 0.96875, 0.0113525, 0.0113525, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "3"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Explosion" type="Sprite" parent="."]

visibility/visible = false
transform/scale = Vector2( 0.566031, 0.566031 )
texture = ExtResource( 5 )


